--- a/Forest/appsettings.json
+++ b/Forest/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "User ID = postgres;Password=myD1chP455peremoga;Server=25.100.91.19; Port=5432;Database=Dev002; Integrated Security=true;Pooling=true;"
-
-
+    "PostgresConnectionDevelopment": "User ID = postgres;Password=myD1chP455peremoga;Server=25.100.91.19;Port=5432;Database=Dev0003;Integrated Security=true;Pooling=true;",
+    "PostgresConnectionLinux": "User ID = postgres;Password=v3rRh4rdp455lidzomObCl4vui49ri4;Server=127.0.0.1;Port=5432;Database=CombatVersion0004;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
