--- a/Forest/appsettings.json
+++ b/Forest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "User ID = postgres;Password=myD1chP455peremoga;Server=25.100.91.19; Port=5432;Database=Dev002; Integrated Security=true;Pooling=true;"
+    "PostgresConnection": "User ID = postgres;Password=myD1chP455peremoga;Server=25.100.91.19; Port=5432;Database=Dev0002A; Integrated Security=true;Pooling=true;"
 
 
   },
