--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -17,18 +17,17 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
-    <PackageReference Include="OpenPop.NET" Version="2.0.6.1120" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\Markup\Markup.csproj" />
+    <Folder Include="Other\Middlewares\" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="Other\Middlewares\" />
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
 
