--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="Telegram.Bot" Version="14.12.0" />
   </ItemGroup>
 
 
