--- a/Website/App.config
+++ b/Website/App.config
@@ -5,7 +5,7 @@
     <add key="EmailAddressUkrNetPassword" value="nuzset0chn0p3r3m0ga" />
     <add key="DomainSmtpUkrNet" value="smtp.ukr.net" />
     <add key="CombatEmail" value="botsconstructor@gmail.com"/>
-    <add key="CombatEmailPassword" value="botsconstructor@gmail.com"/>
+    <add key="CombatEmailPassword" value="schenevmernudavai"/>
   </appSettings>
   <connectionStrings>
     <add name="Firebird"
