--- a/StupidTests/StupidTests.csproj
+++ b/StupidTests/StupidTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
+    <ProjectReference Include="..\Website\Website.csproj" />
   </ItemGroup>
 
 </Project>
