поменял названия узлов в стабе

--- a/Forest/App.config
+++ b/Forest/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="token" value="747439290:AAFsEae_HLFYi-gBrYy7AtmZpr1gw6qL8rM" />
+    <add key="token1" value="724246784:AAHLOtr3Vz_q0Cf5iQvuY_bf-kVm0s-JAMU" />
   </appSettings>
 </configuration>
