--- a/Forest/Forest.csproj
+++ b/Forest/Forest.csproj
@@ -20,4 +20,7 @@
     <ProjectReference Include="..\LogicalCore\LogicalCore.csproj" />
   </ItemGroup>
 
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
