--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -5,6 +5,13 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Views\BotEditing\**" />
+    <Content Remove="Views\BotEditing\**" />
+    <EmbeddedResource Remove="Views\BotEditing\**" />
+    <None Remove="Views\BotEditing\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -34,11 +41,6 @@
     <EmbeddedResource Update="Resources\Controllers.MainController.ru-ru.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <Folder Include="Views\BotEditing\" />
   </ItemGroup>
 
 
