--- a/Forest/appsettings.json
+++ b/Forest/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"PostgresConnectionWindows": "User ID = postgres;Password=myD1chP455peremoga;Server=25.100.91.19;Port=5432;Database=Dev00092;Integrated Security=true;Pooling=true;",
-    "PostgresConnectionWindows": "User ID = postgres;Password=v3rRh4rdp455lidzomObCl4vui49ri4;Server=194.9.71.76;Port=5432;Database=Dev003A;Integrated Security=true;Pooling=true;",
+    "PostgresConnectionWindows": "User ID = postgres;Password=v3rRh4rdp455lidzomObCl4vui49ri4;Server=194.9.71.76;Port=5432;Database=Dev0004;Integrated Security=true;Pooling=true;",
+
     //"PostgresConnectionLinux": "User ID = postgres;Password=v3rRh4rdp455lidzomObCl4vui49ri4;Server=127.0.0.1;Port=5432;Database=CombatVersion0006;Integrated Security=true;Pooling=true;"
     "PostgresConnectionLinux": "User ID = postgres;Password=3t0ssszheM3G4MMM0Ch~n`yparollb_wubfubrkmdbwiyro38;Server=127.0.0.1;Port=5432;Database=CombatVersion0006;Integrated Security=true;Pooling=true;"
 
