--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data" />
+      <Folder Include="Controllers" />
       <Folder Include="Models" />
       <Folder Include="Services" />
       <Folder Include="Views" />
