--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -16,11 +16,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
+      <ProjectReference Include="..\MyLibrary\MyLibrary.csproj" />
     </ItemGroup>
 
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Views\TelegramAgentSettings\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\NewsCreator\Index.cshtml" />
     </ItemGroup>
 
 </Project>
