--- a/MyLibrary/MyLibrary.csproj
+++ b/MyLibrary/MyLibrary.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    </ItemGroup>
+
 </Project>
