--- a/LogicalCore/LogicalCore.csproj
+++ b/LogicalCore/LogicalCore.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Telegram.Bot" Version="14.12.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyLibrary\MyLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
