--- a/StupidTests/StupidTests.csproj
+++ b/StupidTests/StupidTests.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Website\Website.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Pages\BotExamples\Index.cshtml" />
+  </ItemGroup>
+
 </Project>
