написал страницу, которая показывает список пингуемых url и время последнего неудачного пингования

--- a/Monitor/Monitor.csproj
+++ b/Monitor/Monitor.csproj
@@ -25,4 +25,9 @@
       <_ContentIncludedByDefault Remove="Views\NewsCreator\Index.cshtml" />
     </ItemGroup>
 
+
+    <ItemGroup>
+      <UpToDateCheckInput Remove="Views\NewsCreator\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
