убрал немного мусора из Forest

--- a/Forest/Forest.csproj
+++ b/Forest/Forest.csproj
@@ -23,6 +23,11 @@
   </ItemGroup>
 
 
+  <ItemGroup>
+    <Folder Include="Models" />
+  </ItemGroup>
+
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
