--- a/WebsiteUnitTests/WebsiteUnitTests.csproj
+++ b/WebsiteUnitTests/WebsiteUnitTests.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <RootNamespace>WebsiteTest</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
